implement the function to get task data from Realm

--- a/Todo/Todo/Storyboard/Root.storyboard
+++ b/Todo/Todo/Storyboard/Root.storyboard
@@ -9,7 +9,6 @@
         <!--Root View Controller-->
         <scene sceneID="G5o-6e-gnR">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="yPk-es-uiF" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <tabBarController storyboardIdentifier="Root" id="t8B-20-Uep" customClass="RootViewController" customModule="Todo" customModuleProvider="target" sceneMemberID="viewController">
                     <tabBar key="tabBar" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" barStyle="black" id="pRu-k1-19J">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
@@ -24,6 +23,7 @@
                         <segue destination="8BA-QD-9SC" kind="relationship" relationship="viewControllers" id="fFz-AY-0op"/>
                     </connections>
                 </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="yPk-es-uiF" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="665" y="-34"/>
         </scene>
@@ -37,10 +37,10 @@
             </objects>
             <point key="canvasLocation" x="3" y="383"/>
         </scene>
-        <!--Data-->
+        <!--Todo-->
         <scene sceneID="rEC-YT-juV">
             <objects>
-                <viewControllerPlaceholder storyboardName="Data" id="R4H-Z1-buX" sceneMemberID="viewController">
+                <viewControllerPlaceholder storyboardName="Todo" id="R4H-Z1-buX" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="データ" image="list.dash" catalog="system" id="ixx-ox-LK1"/>
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="udJ-Ts-Rl8" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
