--- a/Todo/Todo/Storyboard/Todo.storyboard
+++ b/Todo/Todo/Storyboard/Todo.storyboard
@@ -11,7 +11,7 @@
         <!--タスク-->
         <scene sceneID="UFa-On-ORr">
             <objects>
-                <viewController id="cTN-Ka-xQS" customClass="DataViewController" customModule="Todo" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="cTN-Ka-xQS" customClass="TodoViewController" customModule="Todo" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="FZf-tL-8G1">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
