brush up the app design

--- a/Todo/Todo/Storyboard/Setting.storyboard
+++ b/Todo/Todo/Storyboard/Setting.storyboard
@@ -3,6 +3,7 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -15,7 +16,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <viewLayoutGuide key="safeArea" id="PW3-EI-b0o"/>
-                        <color key="backgroundColor" red="0.26016435030000001" green="0.26477605100000001" blue="0.37648344039999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <color key="backgroundColor" name="mainBackgroudColor"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="設定" image="person" catalog="system" selectedImage="person.fill" id="1gd-pj-AMt"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
@@ -28,5 +29,8 @@
     <resources>
         <image name="person" catalog="system" width="128" height="117"/>
         <image name="person.fill" catalog="system" width="128" height="120"/>
+        <namedColor name="mainBackgroudColor">
+            <color red="0.98000001907348633" green="0.98000001907348633" blue="0.98000001907348633" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
